--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/Shared/_LeftMenu.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/Shared/_LeftMenu.cshtml
@@ -24,7 +24,7 @@
                 <ul>
                     <li>
                         <a href="@Url.Action("Index","DotHienMau")">
-                            <i class="metismenu-icon"></i>
+                            <i class="metismenu-icon  pe-7s-note"></i>
                             Đăng bài
                         </a>
                     </li>
@@ -36,12 +36,12 @@
                     </li>
                 </ul>
             </li>
-            @*<li>
-                <a href="/Admin/chiTietDHM/Index">
-                    <i class="metismenu-icon pe-7s-cloud"> </i>
+            <li>
+                <a href="@Url.Action("Index","BaiDang")">
+                    <i class="metismenu-icon  pe-7s-note"> </i>
                     Đợt tổ chức hiến máu
                 </a>
-            </li>*@
+            </li>
             <li>
                 <a href="@Url.Action("Index","BenhVien")">
                     <i class="metismenu-icon pe-7s-display2"></i>
