--- a/HiemMauNhanDao/HiemMauNhanDao/Views/NhanVienYTe/LienKetNV.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/NhanVienYTe/LienKetNV.cshtml
@@ -13,7 +13,7 @@
             <div class="col-lg-12">
                 <div class="breadcrumb_iner">
                     <div class="breadcrumb_iner_item">
-                        <h2>Thông tin bệnh viện</h2>
+                        <h2>Liên kết bệnh viện</h2>
                     </div>
                 </div>
             </div>
@@ -36,7 +36,7 @@
 
             <div class="col-lg-8 mb-5 mb-lg-0">
                 <div>
-                    <h3 class="mb-30">Cập nhật thông đơn vị</h3>
+                    <h3 class="mb-30">Liên kết bệnh viện</h3>
                     <hr />
                     <div class="panel-body">
                         @if (TempData["AlertMessage"] != null)
@@ -121,7 +121,7 @@
                                         @Html.HiddenFor(model => model.trangThai)
                                     </form>
                                     <div class="text-center" style="margin-top:20px">
-                                        <button type="submit" class="genric-btn primary-border radius"> Đăng ký thành viên</button>
+                                        <button type="submit" class="genric-btn primary-border radius">Liên kết nhân viên</button>
                                     </div>
                                 </div>
                             </div>                           
