--- a/HiemMauNhanDao/HiemMauNhanDao/Views/NhanVienYTe/ViewNVYT.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/NhanVienYTe/ViewNVYT.cshtml
@@ -40,27 +40,30 @@
                             <form class="">
                                 <div class="form-row">
                                     <table class="mt-10">
-                                        <th style="width:400px">
-                                            <input type="email" name="EMAIL" placeholder="Nội dung"
-                                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Nội dung '" required
-                                                   class="single-input">
-                                            @*<input name="searchString1" value="@ViewBag.SearchString1" id="exampleCity" type="text" class="form-control">*@
-                                        </th>
-                                        @*<th class="col-lg-6">
-                                    <div>
-                                        <div class="icon"><i class="fa fa-plane" aria-hidden="true"></i></div>
-                                        <div class="form-select" id="default-select_1">
-                                            <select>
-                                                <option value=" 1">Đợt tổ chức</option>
-                                                <option value="1">Chưa chọn</option>
-                                                <option value="1">Hiến máu nhân đạo tháng 10</option>
-                                                <option value="1">Hiến máu nhân đạo tháng 11</option>
-                                                <option value="1">Hiến máu nhân đạo tháng 12</option>
-                                                <option value="1">Hiến máu nhân đạo tháng 01</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                </th>*@
+                                        <tr>
+                                            <th style="width:400px">
+                                                <input type="email" name="EMAIL" placeholder="Nội dung"
+                                                       onfocus="this.placeholder = ''" onblur="this.placeholder = 'Nội dung '" required
+                                                       class="single-input">
+                                                @*<input name="searchStringNV" value="@ViewBag.SearchStringNV" id="exampleCity" type="text" class="form-control">*@
+                                            </th>
+                                            @*<th class="col-lg-6">
+                                            <div>
+                                                <div class="icon"><i class="fa fa-plane" aria-hidden="true"></i></div>
+                                                <div class="form-select" id="default-select_1">
+                                                    <select>
+                                                        <option value=" 1">Đợt tổ chức</option>
+                                                        <option value="1">Chưa chọn</option>
+                                                        <option value="1">Hiến máu nhân đạo tháng 10</option>
+                                                        <option value="1">Hiến máu nhân đạo tháng 11</option>
+                                                        <option value="1">Hiến máu nhân đạo tháng 12</option>
+                                                        <option value="1">Hiến máu nhân đạo tháng 01</option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        </th>*@
+                                        </tr>
+                                       
                                     </table>
 
                                 </div>
@@ -81,9 +84,7 @@
                                     <th>
                                         STT
                                     </th>
-                                    <th>
-                                        Mã nhân viên
-                                    </th>
+                                    
                                     <th>
                                         Tên nhân viên
                                     </th>
@@ -106,10 +107,7 @@
                                     <tr>
                                         <td>
                                             @i
-                                        </td>
-                                        <td>
-                                            @item.IdNVYT
-                                        </td>
+                                        </td>                                       
                                         <td>
                                             @item.hoTen
                                         </td>
@@ -119,7 +117,6 @@
                                         <td>
                                             @item.tenChucVu.
                                         </td>
-
                                         <td>
                                             <b href="#" class="btn-active" data-id="@item.IdNVYT">@Html.Raw(item.trangThai ? "Hoạt động" : "khóa")</b>
                                         </td>
@@ -137,11 +134,10 @@
                                     i++;
                                 }
                             </table>
-
                         </div>
                         <nav class="blog-pagination justify-content-center d-flex">
                             <ul class="pagination">
-                                @Html.PagedListPager(Model, page => Url.Action("Index", new { page, @searchString = ViewBag.SearchStringBV, @class = "page-link" }))
+                                @Html.PagedListPager(Model, page => Url.Action("Index", new { page, @searchString = ViewBag.SearchStringNV, @class = "page-link" }))
                             </ul>
                         </nav>
                     </div>
