--- a/HiemMauNhanDao/HiemMauNhanDao/Views/chiTietDHM/Index.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/chiTietDHM/Index.cshtml
@@ -43,60 +43,121 @@
                     <div class="blog_left_sidebar">
                         @foreach (var item in listDHM)
                         {
-                            <article class="blog_item">
-                                <div class="blog_item_img">
-                                    <img class="card-img rounded-0" src="~/Assets/client/img/blog/single_blog_10.png" alt="">
-                                    <a class="blog_item_date">
-                                        <h3>      @Html.DisplayFor(model => item.tgBatDau)</h3>
-                                    </a>
-                                </div>
-                                <div class="blog_details">
-                                    <table>
-                                        <tr>
-                                            <th>
-                                                <a href="@Url.Action("DKTC", "DkDHM")  ">@item.TenDHM</a>
-                                            </th>
-                                        </tr>
-                                        <tr>
-                                            <th>
-                                                <a>@item.noiDung</a>
-                                            </th>
-                                        </tr>
-                                    </table>
-                                    <table>
-                                        <tr>
-                                            <th>
-                                                <a>Thời gian triển khai:</a>
-                                            </th>
-                                        </tr>
-                                        <tr>
-                                            <th>
-                                                <a>Từ ngày:  @Html.DisplayFor(model => item.tgBatDau)</a>
-                                            </th>
-                                            <th>
-                                                <a>- Đến ngày: @Html.DisplayFor(model => item.tgKetThuc) </a>
-                                            </th>
-                                        </tr>
-                                    </table>
-                                    <ul class="blog-info-link" style="margin-top:10px">
-                                        @{
-                                            var session5 = (HiemMauNhanDao.Common.UserLogin)Session[HiemMauNhanDao.Common.CommonConstant.USER_SESSION];
-                                        }
-                                        @if (session5 == null)
-                                        {
-                                            <li class="genric-btn warning" href="@Url.Action("Index", "LoginClient") ">Hãy đăng nhập</li>
-                                        }
-                                        else if (session5.AuthorID == "Q04" || session5.AuthorID == "Q03")
-                                        {
-                                            <li class="genric-btn info radius" href="@Url.Action("Create", "chiTietDHM")">Đăng ký</li>
-                                        }
-                                        else
-                                        {
-                                            <li class="genric-btn info radius" href="@Url.Action("NotFound", "LoginClient")">Không có quyền đăng ký</li>
-                                        }
-                                    </ul>
-                                </div>
-                            </article>
+                            if (item.tgKetThuc < DateTime.Now)
+                            {
+                                <article class="blog_item">
+                                    <div class="blog_item_img">
+                                        <img class="card-img rounded-0" src="~/Assets/client/img/blog/single_blog_10.png" alt="">
+                                        <a class="blog_item_date">
+                                            <h3>      @Html.DisplayFor(model => item.tgBatDau)</h3>
+                                        </a>
+                                    </div>
+                                    <div class="blog_details">
+                                        <table>
+                                            <tr>
+                                                <th>
+                                                    <a href="@Url.Action("DKTC", "DkDHM", new { id = item.IdDHM })">@item.TenDHM</a>
+
+                                                </th>
+                                            </tr>
+                                            <tr>
+                                                <th>
+                                                    <a>@item.noiDung</a>
+                                                </th>
+
+                                            </tr>
+                                        </table>
+                                        <table>
+                                            <tr>
+                                                <th>
+                                                    <a>Thời gian triển khai:</a>
+                                                </th>
+                                            </tr>
+                                            <tr>
+                                                <th>
+                                                    <a>Từ ngày:  @Html.DisplayFor(model => item.tgBatDau)</a>
+                                                </th>
+                                                <th>
+                                                    <a>- Đến ngày: @Html.DisplayFor(model => item.tgKetThuc) </a>
+                                                </th>
+                                            </tr>
+                                        </table>
+                                        <ul class="blog-info-link" style="margin-top:10px">
+                                            <li>
+                                                @Html.ActionLink("Hết hạn đăng ký", "Index", "chiTietDHM" , new { @class = "genric-btn danger radius" })
+                                       
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </article>
+                            }
+                            else
+                            {
+                                <article class="blog_item">
+                                    <div class="blog_item_img">
+                                        <img class="card-img rounded-0" src="~/Assets/client/img/blog/single_blog_10.png" alt="">
+                                        <a class="blog_item_date">
+                                            <h3>      @Html.DisplayFor(model => item.tgBatDau)</h3>
+                                        </a>
+                                    </div>
+                                    <div class="blog_details">
+                                        <table>
+                                            <tr>
+                                                <th>
+                                                    <a href="@Url.Action("DKTC", "DkDHM")  ">@item.TenDHM</a>
+                                                </th>
+                                            </tr>
+                                            <tr>
+                                                <th>
+                                                    <a>@item.noiDung</a>
+                                                </th>
+                                            </tr>
+                                        </table>
+                                        <table>
+                                            <tr>
+                                                <th>
+                                                    <a>Thời gian triển khai:</a>
+                                                </th>
+                                            </tr>
+                                            <tr>
+                                                <th>
+                                                    <a>Từ ngày:  @Html.DisplayFor(model => item.tgBatDau)</a>
+                                                </th>
+                                                <th>
+                                                    <a>- Đến ngày: @Html.DisplayFor(model => item.tgKetThuc) </a>
+                                                </th>
+                                            </tr>
+                                        </table>
+                                        <ul class="blog-info-link" style="margin-top:10px">
+                                            @{
+                                                var session5 = (HiemMauNhanDao.Common.UserLogin)Session[HiemMauNhanDao.Common.CommonConstant.USER_SESSION];
+                                            }
+                                            @if (session5 == null)
+                                            {
+                                                <li class="genric-btn warning" href="@Url.Action("Index", "LoginClient") ">Hãy đăng nhập</li>
+                                            }
+                                            else if (session5.AuthorID == "Q04" )
+                                            {
+                                                @Html.ActionLink("Đăng ký", "Create", "chiTietDHM", new { id = item.IdDHM }, new { @class = "btn btn-outline-primary" })
+
+                                                @*<li class="genric-btn info radius" href="@Url.Action("Create", "chiTietDHM")">Đăng ký</li>*@
+                                            }
+                                            else if (session5.AuthorID == "Q03")
+                                            {
+                                                @Html.ActionLink("Đăng ký", "Create2", "chiTietDHM", new { id = item.IdDHM }, new { @class = "btn btn-outline-primary" })
+                                            }
+                                            else
+                                            {
+                                        <li class="genric-btn warning radius">
+                                            @Html.ActionLink("Không có quyền đăng ký", "Index", "chiTietDHM", new { @class = "genric-btn warning radius" })
+
+                                                 </li>
+                                            }
+                                        </ul>
+                                    </div>
+                                </article>
+                            }
+
 
                         }
                     </div>
