--- a/HiemMauNhanDao/HiemMauNhanDao/Views/KetQuaHienMau/DanhSachKQ.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/KetQuaHienMau/DanhSachKQ.cshtml
@@ -2,7 +2,7 @@
 @using PagedList.Mvc
 @using System.Data;
 @{
-    ViewBag.Title = "Lịch sử đăng ký";
+    ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -15,21 +15,33 @@
             <div class="col-lg-12">
                 <div class="breadcrumb_iner">
                     <div class="breadcrumb_iner_item">
-                        <h2>Lịch sử đăng ký</h2>
+                        <h2>Cập nhật kết quả </h2>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
-<!-- breadcrumb start-->
-<!--================Blog Area =================-->
+<script>
+    $(function () {
+        $('#AlertBox').removeClass('hide');
+        $('#AlertBox').delay(5000).slideUp(500);
+    });
+</script>
+<div class="panel-body">
+    @if (TempData["AlertMessage"] != null)
+    {
+        <div id="AlertBox" class="alert @TempData["AlertType"] hide">
+            @TempData["AlertMessage"]
+        </div>
+    }
+</div>
 <section class="blog_area section_padding">
     <div class="container">
         <div class="row">
 
             <div class="col-lg-4">
-                @RenderPage("_leftMenu1.cshtml")
+                @RenderPage("_leftMenu2.cshtml")
             </div>
 
             <div class="col-lg-8 mb-5 mb-lg-0">
@@ -43,7 +55,7 @@
                         </th>
                         <th class="col-lg-6">
                             <div>
-                                Kiểm tra đầy đủ các thông tin   
+                                Kiểm tra đầy đủ các thông tin người tham gia trước khi cập nhật kết quả: <a>  </a>
                             </div>
                         </th>
                         <th></th>
@@ -54,12 +66,15 @@
                                 Ấn nút Chọn:  <a>để sử dụng các chức năng khác</a>
                             </div>
                         </th>
-                         
+                        <th class="col-lg-6">
+                            <div>
+                                Vui lòng nhập đầy đủ các thông tin đề ra <a>  </a>
+                            </div>
+                        </th>
 
                     </tr>
                 </table>
                 <hr />
- 
             </div>
         </div>
 
@@ -83,9 +98,8 @@
                                 <table class="mt-10">
                                     <tr>
                                         <th style="width:400px">
-                                            <input  placeholder="Nội dung"
-                                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Nội dung '" required
-                                                   class="single-input">
+                                            <input name="SearchString" value="@ViewBag.SearchStringKQ" id="exampleCity" type="text" class="single-input">
+
                                             @*<input name="searchString1" value="@ViewBag.SearchString1" id="exampleCity" type="text" class="form-control">*@
                                         </th>
                                         <th class="col-lg-6">
@@ -131,10 +145,13 @@
                                     Mã đăng ký
                                 </th>
                                 <th>
+                                    Mã kết quả
+                                </th>
+                                <th>
                                     Họ tên
                                 </th>
                                 <th>
-                                    thời gian khám
+                                    Giới tính
                                 </th>
                                 <th>
                                     Số điện thoại
@@ -160,27 +177,50 @@
                                         @item.idPDKHM
                                     </td>
                                     <td>
+                                        @item.IdKQHM
+                                    </td>
+                                    <td>
                                         @item.hoTen
                                     </td>
                                     <td>
-                                        @item.tgDuKien
+                                        @(item.gioiTinh == true ? "Nam" : "Nữ")
                                     </td>
                                     <td>
                                         @item.soDT
                                     </td>
 
                                     <td class="text-center">
-                                        <a href="#" class="btn-active" data-id="@item.idPDKHM">@Html.Raw(item.trangThai ? "Đã duyệt" : "Chưa duyệt")</a>
+                                        @item.trangThai2
                                     </td>
 
-                                    <td>                                      
-                                        <div>
-                                            <button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-alternate">Chọn</button>
-                                            <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu" x-placement="right-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(105px, 0px, 0px);">
-                                                <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink("Tình trạng sức khỏe", "Details", new { id = item.IdTTCN })</button>
-                                                <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink("Xem thông tin đăng ký", "TTDK", new { id = item.IdTTCN })</button>
+                                    <td>
+                                        @if (item.trangThai2 != null)
+                                        {
+                                            <div>
+                                                <button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-alternate">Chọn</button>
+                                                <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu" x-placement="right-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(105px, 0px, 0px);">
+                                                    <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink("Xét nghiệm", "Edit", new { id = item.IdKQHM })</button>
+                                                    <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink("Lấy máu", "layMau", new { id = item.IdKQHM })</button>
+
+                                                    <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink("Chi tiết kết quả", "Details", new { id = item.IdTTCN })</button>
+                                                    <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink("Xem thông tin đăng ký", "TTDK", new { id = item.IdTTCN })</button>
+                                                    <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink(" Xóa", "Delete", new { id = item.idPDKHM })</button>
+                                                </div>
                                             </div>
-                                        </div>
+                                        }
+                                        else
+                                        {
+                                            <div>
+                                                <button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-alternate">Chọn</button>
+                                                <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu" x-placement="right-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(105px, 0px, 0px);">
+                                                    <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink("Chi tiết kết quả", "Details", new { id = item.IdTTCN })</button>
+                                                    <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink("Xem thông tin đăng ký", "TTDK", new { id = item.IdTTCN })</button>
+                                                    <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink(" Xóa", "Delete", new { id = item.idPDKHM })</button>
+
+                                                </div>
+                                            </div>
+                                        }
+
                                     </td>
                                 </tr>
                                 i++;
@@ -188,7 +228,7 @@
                         </table>
                         <nav class="blog-pagination justify-content-center d-flex">
                             <ul class="pagination">
-                                @Html.PagedListPager(Model, page => Url.Action("Index", new { page, @searchString = ViewBag.SearchStringDK, @class = "page-link" }))
+                                @Html.PagedListPager(Model, page => Url.Action("Index", new { page, @searchString = ViewBag.SearchStringKQ, @class = "page-link" }))
                             </ul>
                         </nav>
                     </div>
@@ -200,7 +240,9 @@
 </section>
 
 
- 
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="~/Assets/Admin/scripts/duyetPDKHM.js"></script>
+
 <script>
     $(function () {
         $('#AlertBox').removeClass('hide');
