--- a/HiemMauNhanDao/HiemMauNhanDao/Views/NguoiDung/_leftMenu1.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/NguoiDung/_leftMenu1.cshtml
@@ -15,20 +15,16 @@
                     </a>
                 </li>
                 <li>
-                    <a href="@Url.Action("Index","DotToChucHM")" class="d-flex">
+                    <a href="@Url.Action("Create","DotToChucHM")" class="d-flex">
                         <p>Đăng bài</p>
                     </a>
-                </li>
+                </li> 
                 <li>
-                    <a href="@Url.Action("EditKQHM","NhanVienYTe")" class="d-flex">
+                    <a href="@Url.Action("DanhSachDangKy","DVLK")" class="d-flex">
                         <p>Danh sách đăng ký</p>
                     </a>
                 </li>
-                <li>
-                    <a href="#" class="d-flex">
-                        <p>Xác nhận yêu cầu</p>
-                    </a>
-                </li>
+                
             </ul>
         </aside>
         <aside class="single_sidebar_widget post_category_widget">
@@ -43,12 +39,7 @@
                     <a href="@Url.Action("TTSK","NguoiDung")" class="d-flex">
                         <p>Xem lịch sử</p>
                     </a>
-                </li>
-                <li>
-                    <a href="@Url.Action("TTSK","NguoiDung")" class="d-flex">
-                        <p>Xem tình trạng sức khỏe</p>
-                    </a>
-                </li>
+                </li>              
                 <li>
                     <a href="@Url.Action("DoiMK","NguoiDung")" class="d-flex">
                         <p>Đổi mật khẩu</p>
@@ -62,29 +53,35 @@
         <aside class="single_sidebar_widget post_category_widget">
             <h4 class="widget_title">Bệnh viện</h4>
             <ul class="list cat-list">
-                <li>
-                    <a href="@Url.Action("Index","NhanVienYTe") " class="d-flex">
-                        <p>Cập nhật nhân viên</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="@Url.Action("DangKyDHM","NhanVienYTe")" class="d-flex">
-                        <p>Đăng ký đợt hiến máu</p>
-                    </a>
-                </li>
+
                 <li>
                     <a href="@Url.Action("Index","DotToChucHM")" class="d-flex">
                         <p>Đăng bài</p>
                     </a>
                 </li>
                 <li>
-                    <a href="@Url.Action("EditKQHM","NhanVienYTe")  " class="d-flex">
-                        <p>Cập nhật Kết quả hiến máu</p>
+                    <a href="@Url.Action("Index","KetQuaHienMau")  " class="d-flex">
+                        <p>Danh sách đăng ký</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="@Url.Action("DanhSachKQ","KetQuaHienMau")  " class="d-flex">
+                        <p>Cập nhật Kết quả </p>
                     </a>
                 </li>
                 <li>
                     <a href="#" class="d-flex">
-                        <p>Xác nhận yêu cầu</p>
+                        <p>Gửi yêu cầu</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="@Url.Action("Index","NhanVienYTe") " class="d-flex">
+                        <p>Cập nhật nhân viên</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="@Url.Action("Index","NguoiDung")" class="d-flex">
+                        <p>Cập nhật thông tin bệnh viện</p>
                     </a>
                 </li>
                 <li>
@@ -101,8 +98,13 @@
             <h4 class="widget_title">Nhân viên y tế</h4>
             <ul class="list cat-list">
                 <li>
-                    <a href="@Url.Action("EditKQHM","NhanVienYTe")" class="d-flex">
-                        <p>Cập nhật Kết quả hiến máu</p>
+                    <a href="@Url.Action("Index","KetQuaHienMau")  " class="d-flex">
+                        <p>Danh sách đăng ký</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="@Url.Action("DanhSachKQ","KetQuaHienMau")  " class="d-flex">
+                        <p>Cập nhật Kết quả </p>
                     </a>
                 </li>
                 <li>
@@ -125,12 +127,7 @@
                     <a href="@Url.Action("TTSK","NguoiDung")" class="d-flex">
                         <p>Xem lịch sử</p>
                     </a>
-                </li>
-                <li>
-                    <a href="@Url.Action("TTSK","NguoiDung")" class="d-flex">
-                        <p>Xem tình trạng sức khỏe</p>
-                    </a>
-                </li>
+                </li>               
                 <li>
                     <a href="@Url.Action("DoiMK","NguoiDung")" class="d-flex">
                         <p>Đổi mật khẩu</p>
@@ -153,12 +150,7 @@
                     <a href="@Url.Action("TTSK","NguoiDung")" class="d-flex">
                         <p>Xem lịch sử</p>
                     </a>
-                </li>
-                <li>
-                    <a href="@Url.Action("TTSK","NguoiDung")" class="d-flex">
-                        <p>Xem tình trạng sức khỏe</p>
-                    </a>
-                </li>
+                </li>                
                 <li>
                     <a href="@Url.Action("DoiMK","NguoiDung")" class="d-flex">
                         <p>Đổi mật khẩu</p>
